policy-dl: quantifiers as AST nodes